--- a/dotnet-all-about.csproj
+++ b/dotnet-all-about.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
-    <RootNamespace>dotnet_all_about</RootNamespace>
+    <RootNamespace>TRoschinsky.DotnetAllAbout.App</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
